# Compiler

./: .gitignore  CMakeLists.txt  CMakePresets.json  Compiler.cpp  Compiler.h  Compiler.vcxproj  Compiler.vcxproj.filters  Documentation.md  HandwrittenLexer.h  README.md  TableDrivenLexer.cpp  Token.cpp  conanfile.py  conanfile.txt  main.cpp  test.cmm
docs/: CFG-Analisis.md  CFG-LR.md  CFG-left-factoring.md  CFG.md  FIRST.md  First-and-follow.md  Syntactic-diagram.html
example/: test.cmm
include/: AST.h  ASTVisitor.h  Automata.h  Compiler.h  ErrorManager.h  FileReader.h  Lexer.h  LexerException.h  Parser.h  PrintVisitor.h  SemanticAnalyzer.h  Symbol.h  SymbolTable.h  SyntacticException.h  TableDrivenLexer.h  Token.h  TokenBuffer.h  TokenTable.h  Type.h
src/: Automata.cpp  Compiler.cpp  ErrorManager.cpp  FileReader.cpp  HandwrittenLexer.cpp  Lexer.cpp  LexerException.cpp  Parser.cpp  Symbol.cpp  SymbolTable.cpp  SyntacticException.cpp  TableDrivenLexer.cpp  Token.cpp  TokenBuffer.cpp  TokenTable.cpp  lex.yy.cc  main.cpp  scanner.l
tests/: lexer_test.cpp  parser_test.cpp  semantic_test.cpp  test.cmm
